--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@ $(document).ready(function(){
     <meta property="description" content="A place for Finance and Coding.">
     <meta property="og:description" content="A place for Finance and Coding.">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:image" content="/favicon/android-chrome-192x192.png" >
+    <meta name="twitter:image" content="/icon02.png" >
     
     <meta name="twitter:creator" content="">
     <meta name="twitter:site" content="">
@@ -187,7 +187,7 @@ $(document).ready(function(){
     <div class="intro">
 
         <div class="avatar">
-            <img class="img-responsive" src="/img/favicon/android-chrome-192x192.png" alt="Whoopsies, this is my bad side!" style = "margin: 0 auto;">
+            <img class="img-responsive" src="/img/icon02.png" alt="Whoopsies, this is my bad side!" style = "margin: 0 auto;">
             <h1>chuanMing</h1>
         </div>
         
