--- a/public/project/project4/index.html
+++ b/public/project/project4/index.html
@@ -115,7 +115,7 @@ $(document).ready(function(){
     <meta property="og:type" content="article">
       
       <meta name="twitter:card" content="summary">
-      <meta name="twitter:image" content="/favicon/android-chrome-192x192.png" >
+      <meta name="twitter:image" content="/icon02.png" >
       
     <meta property="description" content="Pellentesque eu lacinia id">
     <meta property="og:description" content="Pellentesque eu lacinia id">
